--- a/main.tex
+++ b/main.tex
@@ -126,9 +126,9 @@
 %---------- HEADING ----------
 
 \begin{center}
-    \textbf{\Huge \scshape Nguyen Hoai Nam} \\ \vspace{3pt}
+    \textbf{\Huge \scshape Nguyen Hoai Nam} \\ \vspace{5pt}
     \small
-    \faMobile \hspace{.5pt} \href{tel:0865636494}{+0865636494}
+    \faMobile \hspace{.5pt} \href{tel:0865636494}{+84865636494}
     $|$
     \faAt \hspace{.5pt} \href{mailto:namnhn98@gmail.com}{namnhn98@gmail.com}
     $|$
@@ -161,6 +161,7 @@
       {OpenTechiz Business Technology Inc.}{Ha Noi, Viet Nam}
       {Magento Developer}{Oct 2020 \textbf{--} Present}
       \resumeItemListStart
+        \resumeItem{Migrated data from Magento 1 to Magento 2 and upgraded magento version 2.1.1 to 2.4.5.}
         \resumeItem{Developed custom modules and extensions to extend Magento's functionality and meet specific project requirements.}
         \resumeItem{Integrated third-party services, such as payment gateways, shipping providers to improve website functionality and streamline business operations.}
         \resumeItem{Optimized website performance by implementing caching mechanisms, code refactoring, and database optimization techniques (From 49\% to 80\%).}
@@ -168,6 +169,7 @@
         \resumeItem{Worked with KnockoutJS to enhance the frontend user experience}
         \resumeItem{Led a small development team, providing guidance, assigning tasks, and ensuring project deadlines were met.}
         \resumeItem{Provided technical support and guidance to junior developers, promoting knowledge sharing and continuous learning.}
+        \resumeItem{Kept up-to-date with the latest Magento trends, best practices, and security updates, and applied them to ongoing projects.}
             
         \resumeItemListEnd
     
@@ -179,7 +181,7 @@
 \section{Education}
   \vspace{3pt}
   \resumeSubHeadingListStart    
-    \resumeSubheading{Posts \& Telecoms Institute of Technology (PTIT)}{Ha Noi, Viet Nam}{Degree Major}{\textbf{GPA: 2.46/4}}
+    \resumeSubheading{Posts \& Telecoms Institute of Technology (PTIT)}{Ha Noi, Viet Nam}{Electronics and Communication Engineering}{\textbf{GPA: 2.46/4}}
   \resumeSubHeadingListEnd
 
 
@@ -195,39 +197,38 @@
           \resumeItem{\textbf{Duration:} 3 months}
           \resumeItem{\textbf{Technologies:} Magento 2, MySQL, Docker}
           \resumeItem{\textbf{Descriptions:}
-              \resumeItemListStart
-                \resumeItem{Implemented authentication and authorization mechanisms, ensuring secure access to the API endpoints.}
-                \resumeItem{Designed and implemented the API architecture, adhering to industry best practices and standards for security, scalability, and performance.}
-              \resumeItemListEnd
+            \resumeItemListStart
+              \resumeItem{Implemented authentication and authorization mechanisms, ensuring secure access to the API endpoints.}
+              \resumeItem{Designed and implemented the API architecture, adhering to industry best practices and standards for security, scalability, and performance.}
+            \resumeItemListEnd
           }
-        \resumeItemListEnd\vspace{3pt}
-        \resumeProjectHeading
-          {\textbf{Extensions Mobile Login} $|$ \emph{\href{https://github.com/namnh198/magento-mobile-login}{\color{blue}https://github.com/namnh198/magento-mobile-login}}}  {}       
+        \resumeItemListEnd
+        
+      \resumeProjectHeading
+        {\textbf{Extensions SMS Notification} $|$ \emph{\href{https://github.com/namnh198/magento-sms-notification}{\color{blue}https://github.com/namnh198/magento-sms-notification}}}  {}       
+        \resumeItemListStart
+          \resumeItem{\textbf{Duration:} 1 week}
+          \resumeItem{\textbf{Technologies:} Magento 2, MySQL, Javascript}
+          \resumeItem{\textbf{Descriptions:}
           \resumeItemListStart
-            \resumeItem{\textbf{Duration:} 1 month}
-            \resumeItem{\textbf{Technologies:} Magento 2, MySQL, Docker}
-            \resumeItem{\textbf{Descriptions:}
-              \resumeItemListStart
-                \resumeItem{Developed custom Magento extensions to enable login with a mobile number, providing an alternative authentication method for users.}
-                \resumeItem{Integrated third-party SMS service providers, such as Twilio or SMSto, to be sent for various events, such as order confirmation, registration and password reset.}
-              \resumeItemListEnd
-            }       
+            \resumeItem{Integrated third-party SMS service providers, such as Twilio or SMSto, to be sent for various events, such as order confirmation, registration and password reset.}
           \resumeItemListEnd
-      
+        }       
+      \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 
 %----------- SKILLS -----------
 
 \section{Skills}
-  \vspace{2pt}
-  \resumeSubHeadingListStart
-    \small{\item{
+  \vspace{3pt}
+    \resumeSubHeadingListStart
+      \small{\item{
         \textbf{Programming:}{ Magento 2.x, Elasticsearch, KnockoutJS, ReactJS} \\ \vspace{3pt}
         
         \textbf{Technologies:}{ Git, Docker, Gitlab CI/CD} \\ \vspace{3pt}
         
-        \textbf{Languages:}{ Vietnamese, English}
+        \textbf{Languages:}{ Vietnamese (Native), English (Writing/Reading/Listening)}
     }}
   \resumeSubHeadingListEnd
 
